<?xml version="1.0" encoding="utf-8"?>
<!--
  Context menu for topic rows in the Topics tab and hierarchy widget.
  The Delete item is hidden programmatically for topics that still have
  recordings or child topics.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_new_subtopic"
        android:title="@string/topic_action_new_subtopic" />
    <item
        android:id="@+id/action_move"
        android:title="@string/common_btn_move" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/common_btn_rename" />
    <item
        android:id="@+id/action_icon"
        android:title="@string/topic_btn_icon" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/common_btn_delete" />
</menu>